# AgentCAD

./: .gitignore  BUILD_SUMMARY.md  CLAUDE.md  CLAUDE_CODE_WORKFLOW.md  COMPLETION_SUMMARY.md  DATABASE_SETUP.md  DEBUGGING_SUMMARY.md  DEBUG_SESSION_SUMMARY.md  FINAL_BUG_FIXES.md  IMPROVEMENTS_SUBAGENT_ARCHITECTURE.md  README.md  TEST_RESULTS_FINAL.md  agent_templates.py  build_demo.py  check_database.py  check_workspaces.py  debug_cli.py  debug_cli_only.py  debug_controller_env.py  debug_entity_creation.py  debug_json_response.py  debug_test_scenario.py  debug_workspace_dir.py  debug_workspace_id.py  debug_workspace_resolution.py  docker-compose.yml  manual_tests.py  multi_agent_controller.py  pyproject.toml  test_cli_debug.py  test_cli_fix.py  test_cylinder.stl  test_immediate_check.py  test_import.json  test_output.json  test_pure_cli.py  validate_stl.py  visualize_build.py
.claude/commands/: speckit.implement.md
.skills/humanoid-actuation-agent/: skill.md
.skills/humanoid-architect-agent/: skill.md
.skills/humanoid-skeleton-agent/: skill.md
.specify/memory/: constitution.md
.specify/templates/: agent-file-template.md  plan-template.md
docs/: PERFORMANCE_OPTIMIZATION.md  SECURITY_REVIEW.md
examples/: build_servo_bracket.py  servo_bracket.stl
humanoid_agents/: .env.example  AGENTS_README.md  HOW_TO_USE.md  README.md  README_AGENTS.md  orchestration_helpers.py  requirements.txt
humanoid_agents/agent_prompts/: actuation_designer.md  skeleton_designer.md  system_architect.md
humanoid_agents/config/: global_requirements.json
humanoid_agents/database/: README_IMPORTS.md  import_actuator_specs.py  import_step_files.py  init_db.py  (+1 more)
src/: __init__.py
tests/: conftest.py
(+141 files in other folders)
